--- a/src/CalculatorGUI.form
+++ b/src/CalculatorGUI.form
@@ -22,13 +22,16 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="3ba14" class="javax.swing.JTextPane" binding="textPane">
+          <component id="d93a2" class="javax.swing.JLabel" binding="textLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="28"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1"/>
+              <horizontalAlignment value="4"/>
+              <opaque value="true"/>
+              <text value=" "/>
+            </properties>
           </component>
         </children>
       </grid>
